# FishingApp

./: CMakeLists.txt  Main.qml  README.md  main.cpp
include/FishingEngine/: EngineController.hpp  Species.hpp  WeatherService.hpp  WeatherUtils.hpp
src/: EngineController.cpp  Species.cpp  WeatherService.cpp  WeatherUtils.cpp
